2015-07-29  Basile Clement  <basile_clement@apple.com>

        Unreviewed, remove a .orig file.
        https://bugs.webkit.org/show_bug.cgi?id=113610

        * fast/css-intrinsic-dimensions/height-property-value.html.orig: Removed.

2015-07-28  Benjamin Poulain  <bpoulain@apple.com>

        Speed up the Stringifier::toJSON() fast case
        https://bugs.webkit.org/show_bug.cgi?id=147383

        Reviewed by Andreas Kling.

        Make the fast case of Stringifier::toJSON() inline and the uncommon
        case out-of-line.

        * js/dom/JSON-stringify-string-object-with-tojson-expected.txt: Added.
        * js/dom/JSON-stringify-string-object-with-tojson.html: Added.
        * js/resources/JSON-stringify-string-object-with-tojson.js: Added.
        (stringObject.toJSON):
        (String.prototype.toJSON):

2015-07-28  Simon Fraser  <simon.fraser@apple.com>

        Animations sometimes fail to start
        https://bugs.webkit.org/show_bug.cgi?id=147394
        rdar://problem/21852603

        Reviewed by Dean Jackson.
        
        Test that starts an accelerated and non-accelerated animation, then removes
        the node for the accelerated one.

        * animations/remove-syncing-animation-expected.txt: Added.
        * animations/remove-syncing-animation.html: Added.

2015-07-28  Michael Catanzaro  <mcatanzaro@igalia.com>

        [Freetype] Always allow font matching for strong aliases
        https://bugs.webkit.org/show_bug.cgi?id=147057

        Reviewed by Martin Robinson.

        * platform/gtk/fonts/font-family-fallback-ignores-weak-aliases-expected.html: Added.
        * platform/gtk/fonts/font-family-fallback-ignores-weak-aliases.html: Added.
        * platform/gtk/fonts/font-family-fallback-respects-strong-aliases-expected.html: Added.
        * platform/gtk/fonts/font-family-fallback-respects-strong-aliases.html: Added.

2015-07-28  Myles C. Maxfield  <mmaxfield@apple.com>
