@@ -998,6 +998,7 @@ media/session/content-interruptions.html
 media/session/controls-existence.html
 media/session/default-session.html
 media/session/transient-interruptions.html
+media/session/transient-solo-interruptions.html
 
 # This test requires generation of progress events during loading
 webkit.org/b/100984 media/progress-events-generated-correctly.html [ Failure ]
