@@ -1,3 +1,14 @@
+2015-07-19  Matt Rajca  <mrajca@apple.com>
+
+        Media Session: test 'Transient Solo' interruptions
+        https://bugs.webkit.org/show_bug.cgi?id=147091
+
+        Reviewed by Eric Carlson.
+
+        * media/session/transient-solo-interruptions-expected.txt: Added.
+        * media/session/transient-solo-interruptions.html: Added.
+        * platform/mac/TestExpectations: Media Session support is disabled by default.
+
 2015-07-29  Basile Clement  <basile_clement@apple.com>
 
         Unreviewed, remove a .orig file.
